# cora-ops

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/api/: README.md  main.py  schema.py
src/db/: README.md  save_prediction.py
src/db/libs/: model.py  opensearch.py
