[project]
name = "cora-ops"
version = "0.1.0"
description = ""
authors = [
    {name = "bohyun-shin", email = "shinbo0613@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "scikit-learn==1.6.0",
    "torch==2.5.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "easydict>=1.13",
    "matplotlib==3.9.2",
    "seaborn>=0.13.2",
    "opensearch-py==3.0.0",
    "opensearch-py[async]>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "gnn",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio~=0.25.3",
    "pytest-cov==6.0.0",
    "ruff==0.9.9",
    "pre-commit>=4.0,<5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.9.9",
    "pre-commit>=4.0,<5.0",
]

[tool.uv.sources]
gnn = { git = "https://github.com/bohyunshin/gnn.git", rev = "v1.0.0" }
